objects/Account_Project__c.object
<CustomObject><fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Account_Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Duplicate_Account_Association__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is to prevent that the same Account can only be added once to the project.</description>
        <label>Duplicate Account Association</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>MW_Project__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Account_Projects</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Primary Account</description>
        <label>is Primary</label>
        <type>Checkbox</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>This Object is the Junction Object between Account and MW_Projects.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Account Project Relationship</label><nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Account Project Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Account Project Relationships</pluralLabel><sharingModel>ControlledByParent</sharingModel><startsWith>Vowel</startsWith><visibility>Public</visibility><validationRules>
        <fullName>Do_Not_Allow_Multiple_Primary_Accounts</fullName>
        <active>false</active>
        <description>Only one Account can be marked as a primary on the project when multiple accounts associated with project</description>
        <errorConditionFormula>AND(ISCHANGED( is_Primary__c ),is_Primary__c = true, Project__r.Primary_Number__c =1, Project__r.Count_Account__c &gt;1, PRIORVALUE(is_Primary__c)=false)</errorConditionFormula>
        <errorDisplayField>is_Primary__c</errorDisplayField>
        <errorMessage>Error: Only one Account can be set as Primary</errorMessage>
    </validationRules><validationRules>
        <fullName>Primary_Account_Required</fullName>
        <active>false</active>
        <description>Primary Account required for Territory Support</description>
        <errorConditionFormula>AND( Project__r.Count_Account__c =1,ISPICKVAL(Project__r.Purpose__c ,"Territory Support"),ISCHANGED( is_Primary__c ),is_Primary__c =false)</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>Territory Support project must have a Primary Account</errorMessage>
    </validationRules></CustomObject>